<resources>
    <string name="app_name">Hello</string>
    <string name="hello_world">hello world!</string>
    <string name="btn_send_text">send</string>
    <string name="loading">loading…</string>
    <string name="button_01_name">Image</string>
    <string name="button_02_name">button_02</string>
    <string name="button_03_name">button_03</string>
    <string name="button_04_name">button_04</string>
    <string name="button_05_name">button_03</string>
    <string name="skip">skip</string>
    <string name="image_item_desc">item image</string>
    <string name="image_item_title">image item title</string>
    <string name="splash_desc">splash desc</string>
</resources>
